# waylandpixelsbug

./: Cargo.toml  README.md
src/: main.rs
src/gui/: egui_gui.rs  mod.rs
src/gui/window_renderers/: mod.rs  primary_renderer.rs  status_renderer.rs  window_renderer.rs
