[package]
name = "waylandpixelsbug"
version = "0.0.0"
edition = "2024"
license = "GPL-2.0-only"
authors = ["Sean Erle Johnson"]

[dependencies]
egui = "0.34.1"
egui-wgpu = "0.34.1"
egui-winit = { version = "0.34.1", default-features = false, features = ["links"] }

pixels = "0.17.1"

winit = "0.30.13"

[profile.release]
debug = true
